--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;500;600&family=Lora:wght@400;600&family=Noto+Sans+TC:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -10,7 +10,7 @@ html{
     overflow-x: hidden;
 }
 body{
-    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #DBD4CE;
 }
 .container{
@@ -44,13 +44,6 @@ a{
 }
 /* ----------------header-------------- */
 /* ------------------------------------ */
-.index_header{
-    background-image: url(../images/bannerBG.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    overflow: hidden;
-}
 nav{
     display: flex;
     align-items: center;
@@ -78,7 +71,7 @@ nav h1{
 .menu li{
     position: relative;
     margin:0 16px;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 .menu  li  a{
     color: #3A2922;
@@ -91,7 +84,7 @@ nav h1{
 }
 @media(max-width:992px){
     .menu li{
-        font-size: 1.2rem;
+        font-size: 0.8rem;
         white-space: nowrap;
     }
     .menu li a{
@@ -138,7 +131,7 @@ footer{
     background-color: #3A2922;
 }
 .footer_logo img{
-    width: 10%;
+    width: 8%;
     margin: 0 auto;
     padding: 32px 0 16px;
 }
@@ -148,7 +141,7 @@ footer{
     justify-content: center;
 }
 .footer_menu li{
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 16px 24px;
 }
 .footer_menu li a{
@@ -163,7 +156,7 @@ footer{
 footer small{
     display: block;
     color:#DBD4CE;
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 300;
     text-align: center;
     padding: 16px 0 48px;
@@ -214,29 +207,6 @@ footer small{
     iframe{
         display: none;
     }
-}
-/* behance icon */
-.behance_box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 40px 0 10px;
-}
-.behance_box h2{
-    font-size: 20px;
-    margin: 8px 0;
-    color: #3A2922;
-}
-.icon{
-    text-align: center;
-}
-.icon img{
-    width:120%;
-}
-.icon:hover img{
-    transform: scale(1.25);
-    border: 4px solid #B19071;
-    border-radius: 8px;
 }
 /* back */
 .back_to_portfolio{
