--- a/css/style.css
+++ b/css/style.css
@@ -128,12 +128,23 @@ nav h1{
 /* ---------------main--------------- */
 /* ------------------------------------- */
 main h1{
+    font-size: 1.5em;
     text-align: center;
     padding: 30px 0;
     letter-spacing: 0.1rem;
     font-weight: 400;
     background-color:#3A2922;
     color: #DBD4CE;
+}
+@media(max-width:992px){
+    main h1{
+        font-size: 1rem;
+    }
+}
+@media (max-width:768px){
+    main h1{
+        font-size: 0.5rem;
+    }
 }
 /* ---------------footer--------------- */
 /* ------------------------------------- */
